toy-c-compiler-master/src/test/resources/errors/void_used_in_condition.tc
void f() {
    return;
}

int main() {
    if (f()) {
        return 1;
    }
    return 0;
}
